--- a/user_app/templates/createShow.html
+++ b/user_app/templates/createShow.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% include 'navbar.html' %}
 {% include 'hero.html' %}
+
 <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -9,8 +10,10 @@
                 <div class="card-body">
                     <div class="d-flex">
                         <div class="form-group form-width">
+                            <!-- Create Show Form -->
                             <form method="POST" action="#" enctype="multipart/form-data">
                                 {% csrf_token %}
+
                                 {{ form.title.label_tag }}
                                 {{ form.title }}
                                 {{ form.title.errors }}
@@ -26,6 +29,7 @@
                                 {{ form.description.label_tag }}
                                 {{ form.description }}
                                 {{ form.description.errors }}
+                                <!-- Image Upload and Button -->
                                 <div class="d-flex flex-column">
                                     {{ form.show_image.label_tag}}
                                     {{ form.show_image }}
@@ -40,9 +44,5 @@
         </div>
     </div>
 </div>
-
-
-
-
 
 {% endblock %}
