--- a/user_app/templates/register.html
+++ b/user_app/templates/register.html
@@ -1,13 +1,16 @@
 {% extends 'main.html' %}
 {% block content  %}
+
 <div class="container mt-5">
     <div class="d-flex align-items-center justify-content-between">
         <h1>Register</h1>
         <a href="{% url 'loginUser' %}">Login</a>
     </div>
     <div class="form-group">
+        <!-- Register User Form -->
         <form method="POST" action="">
             {% csrf_token %}
+
             {{ form.username.label_tag}}
             {{ form.username }}
             {{ form.username.errors }}
@@ -27,6 +30,5 @@
         </form>
     </div>
 </div>
-
 
 {% endblock %}
