--- a/user_app/templates/updateShow.html
+++ b/user_app/templates/updateShow.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% include 'navbar.html' %}
 {% include 'hero.html' %}
+
 <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -9,8 +10,10 @@
                 <div class="card-body">
                     <div class="d-flex">
                         <div class="form-group form-width">
+                            <!-- Update Show Form -->
                             <form method="POST" action="#" enctype="multipart/form-data">
                                 {% csrf_token %}
+
                                 {{ form.title.label_tag }}
                                 {{ form.title }}
                                 {{ form.title.errors }}
@@ -27,7 +30,7 @@
                                 {{ form.description }}
                                 {{ form.description.errors }}
 
-                                
+                                <!-- Update Image -->
                                 <div class="mt-2">
                                     {{ form.show_image.label_tag}}
                                     {{ form.show_image }}
