--- a/user_app/templates/main.html
+++ b/user_app/templates/main.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}?{% now 'U' %}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- HTMX Script -->
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <!-- JS Static -->
     <script src="{% static 'js/script.js' %}"></script>
     <title>TV Party</title>
 </head>
@@ -22,7 +25,11 @@
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!--Include JS-->
-    <script src="{% static 'js/script.js' %}"></script>
+    <!-- HTMX -->
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        })
+    </script>
 </body>
 </html>
