--- a/user_app/templates/main.html
+++ b/user_app/templates/main.html
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- HTMX Script -->
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+          event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        })
+      </script>
     <!-- JS Static -->
     <script src="{% static 'js/script.js' %}"></script>
     <title>TV Party</title>
